--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@ body {
 	line-height: 1.25em;
 }
 
+.checkbox-group {
+	display: flex;
+	gap: 10px; /* Adjust spacing between checkboxes */
+}
 p {
 	margin: 0.25em;
 }
